--- a/index.html
+++ b/index.html
@@ -20,64 +20,67 @@
     <main>
         <section class="section-1">
             <div class="container-1">
-            <div class="head">
-                <div>
-                    <h3 class="G3">G3 Architects</h3>
+                <div class="head">
+                    <div>
+                        <h3 class="G3">G3 Architects</h3>
+                    </div>
+                    <div class="navbar">
+                        <div>
+                            Home
+                        </div>
+                        <div>
+                            About
+                        </div>
+                        <div>
+                            Contact Us
+                        </div>
+                        <div>
+                            Login
+                        </div>
+                    </div>
                 </div>
-                <div class="navbar">
-                    <div>
-                        Home
+                <div class="Brand-New">
+                    <div class="articale-1">
+                        <h1>
+                            Brand New Group <br> of Architects
+                        </h1>
+                        <p class="paragraph">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour, or randomised words which don't look even
+                        </p>
+                        <button class="button-1">Explore More</button>
                     </div>
-                    <div>
-                        About
+                    <div class="bannar-img">
+                        <img src="./images/banner.png" alt="">
                     </div>
-                    <div>
-                        Contact Us
-                    </div>
-                    <div>
-                        Login
-                    </div>
+
                 </div>
             </div>
-            <div class="Brand-New">
-                <div class="articale-1">
-                    <h1>
-                        Brand New Group <br> of Architects
-                    </h1>
-                    <p class="paragraph">
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+        </section>
+        <!-----Works on Features (part-2)--------->
+        <section class="section-2">
+            <div class="features">
+                <div class="img ">
+                    <img src="./images/team1.png" alt="">
+
+                    <img src="./images/team2.png" alt="">
+
+                    <img src="./images/team3.png" alt="">
+
+                    <img src="./images/team4.png" alt="">
+                </div>
+                <div class="Quick-list">
+                    <h3> <span>Quick list </span>of Our <br> <b>Features </b></h3>
+                    <p class="paragraph-1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour, or randomised words which don't look even
                     </p>
-                    <button class="button-1">Explore More</button>
+                    <button class="button-2">Explore More</button>
+
+
+
                 </div>
-                <div class="bannar-img">
-                    <img  src="./images/banner.png" alt="">
-                </div>
-
             </div>
-        </div>
-           </section>
-    <!-----Works on Features (part-2)--------->
-    <section class="section-2">
-        <div class="features-img">
-            <div class="img ">
-                <img src="./images/team1.png" alt="">
-
-            </div>
-            <div class="img ">
-                <img src="./images/team2.png" alt="">
-
-            </div>
-            <div class="img ">
-                <img src="./images/team3.png" alt="">
-
-            </div>
-            <div class="img ">
-                <img src="./images/team4.png" alt="">
-
-            </div>
-
-        </div>
 
         </section>
     </main>
