--- a/index.html
+++ b/index.html
@@ -2,90 +2,190 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>g3-architects</title>
     <!------Stylesheet--------->
-    <link rel="stylesheet" href="./styles/styles.css">
-
+    <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
 <body>
     <!---Header start---->
-    <header>
-
-    </header>
+    <header></header>
     <!---Header end-->
     <main>
         <section class="section-1">
             <div class="container-1">
                 <div class="head">
-                    <div>
-                        <h3 class="G3">G3 Architects</h3>
+                    <div class="G3">
+                        <h3 >G3 Architects</h3>
                     </div>
                     <div class="navbar">
-                        <div>
-                            Home
-                        </div>
-                        <div>
-                            About
-                        </div>
-                        <div>
-                            Contact Us
-                        </div>
-                        <div>
-                            Login
-                        </div>
+                        <div>Home</div>
+                        <div>About</div>
+                        <div>Contact Us</div>
+                        <div>Login</div>
                     </div>
                 </div>
                 <div class="Brand-New">
                     <div class="articale-1">
                         <h1>
-                            Brand New Group <br> of Architects
+                            Brand New Group <br />
+                            of Architects
                         </h1>
                         <p class="paragraph">
-                            There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered
-                            alteration in some form, by injected humour, or randomised words which don't look even
+                            There are many variations of passages of Lorem Ipsum available,
+                            but the majority have<br />
+                            suffered alteration in some form, by injected humour, or
+                            randomised words which don't look even
                         </p>
                         <button class="button-1">Explore More</button>
                     </div>
                     <div class="bannar-img">
-                        <img src="./images/banner.png" alt="">
+                        <img src="./images/banner.png" alt="" />
                     </div>
-
                 </div>
             </div>
         </section>
         <!-----Works on Features (part-2)--------->
         <section class="section-2">
             <div class="features">
-                <div class="img ">
-                    <img src="./images/team1.png" alt="">
+                <div class="img">
+                    <img src="./images/team1.png" alt="" />
 
-                    <img src="./images/team2.png" alt="">
+                    <img src="./images/team2.png" alt="" />
 
-                    <img src="./images/team3.png" alt="">
+                    <img src="./images/team3.png" alt="" />
 
-                    <img src="./images/team4.png" alt="">
+                    <img src="./images/team4.png" alt="" />
                 </div>
                 <div class="Quick-list">
-                    <h3> <span>Quick list </span>of Our <br> <b>Features </b></h3>
-                    <p class="paragraph-1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised words which don't look even
+                    <h3>
+                        <span>Quick list </span>of Our <br />
+                        <b>Features </b>
+                    </h3>
+                    <p class="paragraph-1">
+                        There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised words which don't look even
                     </p>
                     <button class="button-2">Explore More</button>
-
-
-
                 </div>
             </div>
+        </section>
+        <!-------Start work on part-3-------->
+        <section class="section-3">
+            <div class="features-discription">
+                <div>
+                    <h3 class="heading">
+                        Features you will <br />
+                        love & enjoy
+                    </h3>
+                    <p class="information">
+                        There are many variations of passages of Lorem Ipsum available,
+                        but the <br />
+                        have suffered alteration in some form, by injected humour, or
+                        <br />randomised words which don't look even
+                    </p>
+                </div>
+                <div class="box-shadow-1">
+                    <h3>Desktop & Mobile Version</h3>
+                    <p class="information">
+                        There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="box-shadow-2">
+                    <h3>Drag & Drop Builder</h3>
+                    <p class="information">
+                        There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="box-shadow-3">
+                    <h3>Awesome Modern Design</h3>
+                    <p class="information">
+                        There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="box-shadow-4">
+                    <h3>Super Easy to Edit</h3>
+                    <p class="information">
+                        There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........
+                    </p>
+                </div>
+            </div>
+            <div class="architect-img">
+                <img src="./images/architect.png" alt="" />
+                <button class="button-3">
+                    <span class="year">10+Year</span><br />
+                    Experiences
+                </button>
+            </div>
+        </section>
+        <!------Works on some facts part-4-------->
+        <section class="section-4">
+            <div class="facts">
+                <h3>Some Facts</h3>
+                <p class="facts-info">
+                    There are many variations of passages of Lorem Ipsum available,
+                    <br />but the majority have suffered alteration.
+                </p>
+            </div>
+            <div class="icons">
+                <div class="ribon">
+                    <img src="./images/icons/ribon.png" alt="" />
+                    <h3>54</h3>
+                    <small>Awards Winnings</small>
+                </div>
+
+                <div class="projects">
+                    <img src="./images/icons/projects.png" alt="" />
+                    <h3>1458</h3>
+                    <small>Project Finished</small>
+                </div>
+
+                <div class="customers">
+                    <img src="./images/icons/customers.png" alt="" />
+                    <h3>590</h3>
+                    <small>Clients Worked</small>
+                </div>
+                <div class="email">
+                    <img src="./images/icons/email.png" alt="" />
+                    <h3>22574</h3>
+                    <small>Email Send</small>
+                </div>
+            </div>
+        </section>
+        <section class="section 5">
+            <div>
+                <h3 class="spon-heading">Our Sponspors</h3>
+                <p class="spon-info">There are many variations of passages of Lorem Ipsum available, but <br>the
+                    majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="spon-img">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+
+            </div>
+
+            <footer class="end">
+                All rights reserved copyright@2023 startup landing page design
+            </footer>
 
         </section>
     </main>
-
-
 </body>
 
 </html>
